--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -152,16 +152,14 @@
                         <% if(userData != 'undefined' && userType != 'client') { %>
                         <li class="text-center"><a href="../staff/schedule">SCHEDULE</a></li>
                         <% } else { %>
-                        <li class="text-center"><a href="/">HOME</a></li>
+                        <li class="text-center"><a href="/"><span class="glyphicon glyphicon-info-sign"></span></a></li>
                         <% } %>
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4 nav nav-pills">
-                        <li class="text-center"><a href="../rooms/accommodation">ACCOMMODATION</a></li>
                     </div>
 
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 nav nav-pills">
-                        <li class="text-center"><a href="../rooms/pricing">PRICING</a></li>
                     </div>
 
                     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 nav nav-pills">
