--- a/app/views/payment.ejs
+++ b/app/views/payment.ejs
@@ -82,16 +82,16 @@
 
 		/* ------------------------------------------- MAIN.CSS --------------------------------------------------------*/
 
-		/* div[class="container-fluid"] {
+		 /* div[class="container-fluid"] {
          outline: 4px dotted rgba(0, 0, 0, 1);
          background-color: rgb(100, 0, 0, 0.2);
-      }
+      } */
 
-      div[class="row"] {
+     /* div[class="row"] {
          outline: 3px dotted rgb(234, 0, 255);
-      }
+      } */
 
-      div[class^="col"] {
+      /* div[class^="col"] {
          outline: 3px dotted rgb(189, 255, 6);
       } */
 
@@ -113,7 +113,7 @@
 			background-repeat: no-repeat;
 			background-size: cover;
 		}
-
+		
         .badge {
             position: absolute;
             top: 22px;
@@ -123,6 +123,10 @@
             background-color: red;
             color: white;
         }
+
+		.borderless td, .borderless th {
+			border: none;
+		}
 
 		.details-component {
 			margin-top: 15px;
@@ -165,7 +169,7 @@
 
         #content-inner {
 			/* Rounded corners */
-			border-radius: 100px;
+			border-radius: 40px;
 			background-color: rgba(49, 3, 9, 0.3)
 		}
 
@@ -180,6 +184,10 @@
 			width: 25%;
 		}
 
+		#form1 {
+			margin-bottom:60px;
+		}
+
         #notificationsTable {
             position: relative;
             margin-left: 100px;
@@ -191,6 +199,14 @@
             text-align: center;
             color: black;
         }
+
+		#payslip {
+			margin-top: 10px;
+			margin-bottom: 20px;
+			border-style: solid;
+			background-color: rgba(179, 185, 134, 0.9);
+			color: black;
+		}
 
 		#personalDetails {
 			padding-top: 30px;
@@ -279,10 +295,10 @@
 								<a class="nav-link" href="../../dashboard">Profile</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="../../dashboard/payment">Payment</a>
+								<a class="nav-link active" href="payment">Payment</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link active" href="notifications">
+								<a class="nav-link" href="../../dashboard/notifications">
                                     Notifications 
                                     <% if(typeof notificationsArray != 'undefined' && notificationsArray.length > 0) { %>
                                         <span class="badge">
@@ -302,36 +318,156 @@
 				</div>
 
 				<div class="col-lg-9 col-md-6 col-sm-8 col-xs-12" id="content-inner">
-                    <% if(typeof notificationsArray != 'undefined' && notificationsArray.length > 0) { %>
-                        <table class="table table-sm table-dark text-center" id="notificationsTable" style="width:80%;">
-                            <thead>
-                              <tr>
-                                <th scope="col" class="text-center" style="width: 28%;">Time</th>
-                                <th scope="col" class="text-center" style="width: 65%;">Message</th>
-                                <th scope="col" class="text-center" style="width: 7%;">Action</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                            <% notificationsArray.forEach(function(notification) { %>
-                                <tr>
-                                    <th scope="row" class="text-left"><%= notification.issue_time.toLocaleString() %></th>
-                                    <td class="text-left"><%= notification.message %></td>
-                                    <td>
-                                        <form role="form" method="POST" action="/actions/deleteNotification" id="form1">
-                                            <input type="hidden" id="notificationID" name="notificationID" value='<%= notification.id %>'>
-                                            <button type="submit" class="btn btn-warning btn-xs" id="btn-read">
-                                                Got it
-                                            </button>
-                                        </form>
-                                    </td>
-                                </tr>
-                            <% }) %>
-                            </tbody>
-                        </table>
-                    <% } else { %>
-                        <h1 id="noNotifications">Looks like nothing is going on. Time to relax!</h1>
-                    <% } %>
+					<% if (userType == 'manager' || userType == 'owner') { %>
+						<div class="row">
+							<form role="form" method="POST" action="/staff/generatePayslip" id="form1">
+								<div class="form-group">
+									<div class="col-lg-4">
+										<select class="form-control pull-right" id="dropdown_receptionist"
+										   name="dropdown_receptionist">
+										   <option disabled>Receptionist</option>
+										   <% receptionistMap.forEach(function(value, key) { %>
+											<option><%= key %></option>
+											<% }) %>
+										</select>
+									 </div>
+									 <div class="col-lg-4">
+										<select class="form-control pull-right" id="dropdown_month" name="dropdown_month">
+										   <option disabled>Month</option>
+										   <% monthsArray.forEach(function(month) { %>
+											<option><%= month %></option>
+											<% }) %>
+										</select>
+									 </div>
+									 <div class="col-lg-2">
+										<button type="submit" class="btn btn-warning btn-md pull-right"
+										   id="btn-update">Generate Payslip</button>
+									 </div>
+									 <div class="col-lg-2">
+										<% if (typeof(newPayslip) != 'undefined' ) { %>
+											<div class="text-center" style="background-color:green; border-style: solid 1px; padding-top:7px; padding-bottom:7px;">Success</div>
+										<% } %>
+									 </div>
+								</div>
+							</form>
+						</div>
+					<% } %>
+					<% if (typeof newPayslip != 'undefined') { %>
+						<div id="payslip">
+							<div class="row">
+								<div class="text-center" style="background-color: rgba(2, 0, 128, 0.692); padding-top: 3px; padding-bottom: 3px;">
+									Payslip
+								</div>
+							</div>
+							<div class="row">
+								<div class="text-left" style="padding-left: 15%; padding-top: 1%;">
+									Company name: Hotel
+								</div>
+								<hr>
+							</div>
+							<div class="row">
+								<div class="col-lg-6">
+									<div class="row">
+										<div class="text-center">
+											Pay Period: <%= newPayslip.month %>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-lg-6 text-center" style="background-color: rgba(2, 0, 128, 0.692);">
+											Description
+										</div>
+										<div class="col-lg-5 col-lg-offset-1 text-center" style="background-color: rgba(2, 0, 128, 0.692);">
+											Amount
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-lg-6 text-center">
+											Hours
+										</div>
+										<div class="col-lg-5 col-lg-offset-1 text-center">
+											<%= newPayslip.hours %>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-lg-6 text-center">
+											Rate
+										</div>
+										<div class="col-lg-5 col-lg-offset-1 text-center">
+											<%= newPayslip.rate %>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-lg-6 text-center">
+											Gross pay
+										</div>
+										<div class="col-lg-5 col-lg-offset-1 text-center">
+											<%= newPayslip.gross_pay %>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-lg-6 text-center">
+											Tax
+										</div>
+										<div class="col-lg-5 col-lg-offset-1 text-center">
+											<%= newPayslip.tax %>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-lg-6 text-center">
+											Nat Insurance
+										</div>
+										<div class="col-lg-5 col-lg-offset-1 text-center">
+											<%= newPayslip.national_insurance %>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-lg-6 text-center">
+											EE Pension
+										</div>
+										<div class="col-lg-5 col-lg-offset-1 text-center">
+											0.00
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-lg-6 text-center">
+											ER Pesnion
+										</div>
+										<div class="col-lg-5 col-lg-offset-1 text-center">
+											0.00
+										</div>
+									</div>
+								</div>
+								<div class="col-lg-6">
+									<div class="row">
+										<div class="col-lg-6 text-center" style="margin-top: 40px;">
+											Employee ID
+										</div>
+										<div class="col-lg-6 text-center" style="margin-top: 40px;">
+											<%= newPayslip.receptionist_id %>
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-lg-6 text-center">
+											Employee name
+										</div>
+										<div class="col-lg-6 text-center">
+											<%= newPayslip.firstname %>&nbsp;<%= newPayslip.lastname %> 
+										</div>
+									</div>
+									<div class="row">
+										<div class="col-lg-6 text-center">
+											Net pay
+										</div>
+										<div class="col-lg-6 text-center">
+											<%= newPayslip.net_pay %>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					<% } %>
 				</div>
+				
 			</div>
 		</div>
 
